--- a/app/frontend/Dockerfile
+++ b/app/frontend/Dockerfile
@@ -19,4 +19,4 @@ EXPOSE 3000
 # Configurar os comandos para iniciar a aplicação de acordo com as boas práticas
 # Dica: Leia a seção Docker e Docker-compose no README para mais informações
 ENTRYPOINT [ "npm" ]
-CMD [ "start" ]
+CMD [ "run", "start" ]
